Remove a bunch of settings.