@@ -76,7 +76,6 @@ test {
     if (System.env.CI == 'true') {
         testLogging.showStandardStreams = true
     }
-    jvmArgs "-XX:MaxPermSize=1024m"
 }
 
 jar {
@@ -86,7 +85,6 @@ jar {
 
 idea {
     project {
-        jdkName = '1.7'
         languageLevel = '1.6'
     }
 }
